DOM practice final

--- a/site_1/index.html
+++ b/site_1/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <input type="" id="inp1" value="0">
-    <input type="button" value="-1" id="plus">
-    <input type="button" value="+1" id="minus">
+    <input type="" placeholder="a">
+    <input type="" name="" placeholder="b">
+    <input type="" name="" placeholder="c">
+    <p id="p1"></p>
+    <button id="butt1">Click</button>
 
     <script src="script.js"></script>
 </body>
